@@ -15,7 +15,9 @@ arm-*-pe)		targ_emul=armpe ;;
 arc-*-elf*)		targ_emul=arcelf ;;
 d10v-*-*)		targ_emul=d10velf ;;
 # start-sanitize-d30v
-d30v-*-*)		targ_emul=d30velf ;;
+d30v-*-*ext*)		targ_emul=d30v_e; targ_extra_emuls="d30velf d30v_o" ;;
+d30v-*-*onchip*)	targ_emul=d30v_o; targ_extra_emuls="d30velf d30v_e" ;;
+d30v-*-*)		targ_emul=d30velf; targ_extra_emuls="d30v_e d30v_o" ;;
 # end-sanitize-d30v
 sparc64-*-aout*)	targ_emul=sparcaout ;;
 sparc64-*-elf*)		targ_emul=elf64_sparc ;;
