@@ -1,15 +1,0 @@
-MACHINE=
-SCRIPT_NAME=elfd30v
-OUTPUT_FORMAT="elf32-d30v"
-TEXT_START_ADDR=0x00000000
-DATA_START_ADDR=0x20000000
-EMEM_START_ADDR=0x80000000
-STACK_START_ADDR=0x20008000
-TEXT_SIZE=64K
-DATA_SIZE=32K
-EMEM_SIZE=8M
-TEXT_MEMORY=text
-DATA_MEMORY=data
-BSS_MEMORY=data
-ARCH=d30v
-EMBEDDED=t
